--- a/react-course/package.json
+++ b/react-course/package.json
@@ -24,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-css": "npx tailwindcss build src/App.css -o src/App.output.css"
   },
   "eslintConfig": {
     "extends": "react-app"
