--- a/react-course/package.json
+++ b/react-course/package.json
@@ -22,11 +22,11 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "yarn build:css && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build-css": "npx tailwindcss build src/App.css -o src/App.output.css"
+    "build:css": "npx tailwindcss build src/App.css -o src/App.output.css"
   },
   "eslintConfig": {
     "extends": "react-app"
