--- a/react-course/package.json
+++ b/react-course/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "tailwindcss": "^1.8.13",
+    "object-path": "^0.11.5",
     "typescript": "^4.0.3"
   },
   "scripts": {
