--- a/vue-song/package.json
+++ b/vue-song/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "yarn build:css && vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build:css": "npx tailwindcss build src/assets/css/index.css -o src/assets/css/index.output.css"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "tailwindcss": "^1.9.6",
+    "vue": "^3.0.0",
+    "vuetify": "^2.3.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -17,7 +20,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^7.12.1",
     "eslint-plugin-vue": "^7.0.0-0"
   },
   "eslintConfig": {
