--- a/vue-song/package.json
+++ b/vue-song/package.json
@@ -9,6 +9,7 @@
     "build:css": "npx tailwindcss build src/assets/css/index.css -o src/assets/css/index.output.css"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "tailwindcss": "^1.9.6",
     "vue": "^3.0.0",
