--- a/vue-song/package.json
+++ b/vue-song/package.json
@@ -13,11 +13,13 @@
     "core-js": "^3.6.5",
     "tailwindcss": "^1.9.6",
     "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
     "vuetify": "^2.3.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
