--- a/songplaylist/package.json
+++ b/songplaylist/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-cli-plugin-vuetify-preset-basil": "^1.0.4",
+    "vue-router": "^3.4.8",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
