add perfect scroll bar

--- a/songplaylist/package.json
+++ b/songplaylist/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.11",
     "vue-cli-plugin-vuetify-preset-basil": "^1.0.4",
     "vue-router": "^3.4.8",
+    "vue2-perfect-scrollbar": "^1.5.0",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
