--- a/vue-song/package.json
+++ b/vue-song/package.json
@@ -9,22 +9,22 @@
     "build:css": "npx tailwindcss build src/assets/css/index.css -o src/assets/css/index.output.css"
   },
   "dependencies": {
-    "axios": "^0.21.0",
-    "core-js": "^3.6.5",
-    "tailwindcss": "^1.9.6",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuetify": "^2.3.16"
+    "axios": "^0.21.1",
+    "core-js": "^3.12.0",
+    "tailwindcss": "^2.1.2",
+    "vue": "^2.6.12",
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.4.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/cli-plugin-babel": "~4.5.12",
+    "@vue/cli-plugin-eslint": "~4.5.12",
+    "@vue/cli-plugin-router": "~4.5.12",
+    "@vue/cli-service": "~4.5.12",
+    "@vue/compiler-sfc": "^3.0.11",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.12.1",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint": "^7.25.0",
+    "eslint-plugin-vue": "^7.9.0"
   },
   "eslintConfig": {
     "root": true,
